# deallens-diligence-lab

./: .env.example  .env.prod.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
apps/api/: .dockerignore  BUILD_SPEC.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0fcfabe85d5e_signed_webhook_deliveries.py  (+20 more)
apps/api/perf/: README.md  k6_load_test.js  perf_budget.json
apps/api/scripts/: generate_client.md
apps/api/src/: __init__.py  config.py  main.py  observability.py  permissions.py
apps/api/tests/: conftest.py  perf_seed.py  test_agent_compare.py  test_agent_eval.py  test_agent_memo.py  test_agent_proposals.py  test_agent_stream.py  test_analysis_versioning.py  test_api_keys.py  test_api_versioning.py  test_audit_explorer.py  test_calibration.py  test_comments.py  test_comp_similarity.py  test_cross_corpus_qa.py  test_cross_corpus_synthesis.py  test_deal_intelligence.py  test_deal_workflow.py  test_debt_maturities.py  test_demo_mode.py  test_diligence_agent.py  test_dilution.py  test_driver_and_events.py  test_embedding_backends.py  test_example_deal.py  test_export_and_webhook_security.py  test_export_signing.py  test_extraction_comparison.py  test_filing_diff.py  test_filings_qa.py  test_fiscal_diagnostics.py  test_forensics.py  test_fund_construction.py  test_governed_evidence_integrity.py  test_grounded_synthesis.py  test_hybrid_retrieval.py  test_identity.py  test_inbox_sla.py  test_insider_patterns.py  test_job_queue.py  (+57 more)
(+422 files in other folders)
